--- a/src/common/main.scss
+++ b/src/common/main.scss
@@ -96,9 +96,9 @@ body {
 
 .card-container {
     display:flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     width:100%;
-    max-width: 100vw;
-    justify-content: space-between;
-    align-items:flex-start;
+    max-width: 100%;
+    justify-content: center;
+    align-items:center;
 }
