--- a/src/components/cards.scss
+++ b/src/components/cards.scss
@@ -1,10 +1,14 @@
 @import "../common/variables";
 
+$card-fade: 1s;
+
 .card {
-    width: 100%;
-    max-width: 100%;
+    width: calc(100% - #{$spacer * 2});
+    max-width: calc(100% - #{$spacer * 2});
     overflow-wrap: break-word;
     margin-bottom: 5%;
+    opacity: .15;
+    transition: opacity $card-fade ease-in-out;
 }
 
 .card > div > a > img {
@@ -25,16 +29,21 @@
     justify-content: space-around;
 }
 
-@media (min-width: map-get($breakpoints, "md")) and (max-width: map-get($breakpoints, "xl")) {
+@media (min-width: map-get($breakpoints, "md")) {
     .card {
-        width: 45%;
-        max-width: 45%;
+        width: 50%;
+        max-width: 50%;
     }
+
+    
 }
 
-@media (min-width: map-get($breakpoints, "xl") + 1px) {
-    .card {
-        width: 45%;
-        max-width: 45%;
-    }
+.card:hover {
+    opacity:1;
+    transition: opacity ($card-fade / 2) ease-in-out;
+}
+
+.visible {
+    opacity: 1;
+    transition: opacity $card-fade ease-in-out;
 }
