--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,8 +1,9 @@
 header {
     position: absolute;
     top: 0;
-    min-width: 100%;
-    max-width: 100vw;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
     background: transparent;
     color: white;
     z-index: 999;
