--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -22,6 +22,7 @@
     z-index: 3;
     font-size: clamp(2.5rem, 7vw, 7rem);
     color: white;
+    text-align: center;
 }
 
 .hero-text-scroll {
@@ -48,6 +49,8 @@
     min-width: 100%;
     max-width: 100vw;
     position: absolute;
+    left: 0;
+    top: 0;
     z-index:2;
 
     background-color: black;
